// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Formatted Address should render 1`] = `
<div>
  <div
    class="inline-block w-64 undefined"
  >
    <div
      class="sc-AxjAm hsiRAq"
    >
      <div>
        <div
          class="relative"
        >
          <button
            class="float-right outline-none focus:outline-none"
            data-testid="dropdown__toggle"
          >
            <div
              class="sc-AxiKw dklFyP"
              height="20"
              width="20"
            >
              <svg>
                settings.svg
              </svg>
            </div>
          </button>
        </div>
        <div />
      </div>
      <div>
        <div
          class="-mr-2 sc-AxirZ kFgwHB border-theme-primary-contrast undefined"
        />
        <div
          class="sc-AxirZ kFgwHB border-theme-primary-contrast"
        />
      </div>
      <div
        class="mt-4 truncate max-w-12"
      />
      <div
        class="font-bold text-theme-neutral-800"
      />
    </div>
  </div>
</div>
`;

exports[`Formatted Address should render blank 1`] = `
<div>
  <div
    class="inline-block w-64 undefined"
  >
    <div
      class="sc-AxjAm hsiRAq"
    >
      <div>
        <div
          class="-mr-2 sc-AxirZ kFgwHB border-theme-primary-contrast"
        />
        <div
          class="sc-AxirZ kFgwHB border-theme-primary-contrast"
        />
      </div>
      <div
        class="mt-4 text-sm text-theme-primary-contrast"
      >
        New wallet
      </div>
      <div
        class="mt-1 text-sm text-theme-primary-contrast"
      >
        Balance
      </div>
    </div>
  </div>
</div>
`;

exports[`Formatted Address should render with wallet data 1`] = `
<div>
  <div
    class="inline-block w-64 undefined"
  >
    <div
      class="sc-AxjAm hsiRAq"
    >
      <div>
        <div
          class="relative"
        >
          <button
            class="float-right outline-none focus:outline-none"
            data-testid="dropdown__toggle"
          >
            <div
              class="sc-AxiKw dklFyP"
              height="20"
              width="20"
            >
              <svg>
                settings.svg
              </svg>
            </div>
          </button>
        </div>
        <div />
      </div>
      <div>
        <div
          class="-mr-2 sc-AxirZ kFgwHB border-theme-primary-contrast border-theme-warning-200"
        >
          <div
            class="sc-AxiKw bctdez"
            height="16"
            width="16"
          />
        </div>
        <div
          class="sc-AxirZ gaboTh border-theme-primary-contrast"
        />
      </div>
      <div
        class="mt-4 truncate max-w-12"
      >
        <div
          class="inline-block truncate"
        >
          <span
            class="flex-auto mt-4 mr-1 text-base font-semibold truncate text-theme-neutral-800 max-w-24"
            data-testid="address__wallet-name"
          >
            My wallet
          </span>
          <span
            class="text-base font-semibold text-theme-neutral-400"
            data-testid="address__wallet-address"
          >
            ASuu...3kqT
          </span>
        </div>
      </div>
      <div
        class="font-bold text-theme-neutral-800"
      >
        100,000 BTC
      </div>
    </div>
  </div>
</div>
`;

exports[`Formatted Address should render with wallet data and optional icon 1`] = `
<div>
  <div
    class="inline-block w-64 undefined"
  >
    <div
      class="sc-AxjAm hsiRAq"
    >
      <div>
        <div
          class="relative"
        >
          <button
            class="float-right outline-none focus:outline-none"
            data-testid="dropdown__toggle"
          >
            <div
              class="sc-AxiKw dklFyP"
              height="20"
              width="20"
            >
              <svg>
                settings.svg
              </svg>
            </div>
          </button>
        </div>
        <div />
      </div>
      <div>
        <div
          class="-mr-2 sc-AxirZ kFgwHB border-theme-primary-contrast border-theme-warning-200"
        >
          <div
            class="sc-AxiKw bctdez"
            height="16"
            width="16"
          />
        </div>
        <div
          class="sc-AxirZ gaboTh border-theme-primary-contrast"
        />
      </div>
      <div
        class="mt-4 truncate max-w-12"
      >
        <div
          class="inline-block truncate"
        >
          <span
            class="flex-auto mt-4 mr-1 text-base font-semibold truncate text-theme-neutral-800 max-w-24"
            data-testid="address__wallet-name"
          >
            My wallet
          </span>
          <span
            class="text-base font-semibold text-theme-neutral-400"
            data-testid="address__wallet-address"
          >
            ASuu...3kqT
          </span>
        </div>
      </div>
      <div
        class="font-bold text-theme-neutral-800"
      >
        100,000 BTC
      </div>
    </div>
  </div>
</div>
`;
